--- a/datacombo/templates/survey/survey.html
+++ b/datacombo/templates/survey/survey.html
@@ -1,5 +1,8 @@
 {% extends "base.html" %}
 
+{% load pagination_tags %}
+{% load template_filters %}
+
 {% block content %}
 
 <h1>{{ survey.name }}</h1>
@@ -48,10 +51,11 @@
             <th>Most Recent No. of Student Responses</th>
           </tr>
           
+          {% autopaginate schools %}
           {% for s in schools %}
           <tr class="school">
             <td><a href="{{ s.get_absolute_url }}">{{ s.name }}</a></td>
-            <td>{{ s.repeat_count }}</td>
+            <td>{{ s|repeat_count:survey }}</td>
             <td>{{ s.schoolparticipation_set.latest.month }}, {{ s.schoolparticipation_set.latest.year }}</td>
             <td>{{ s.schoolparticipation_set.latest.student_count }}</td>
           </tr>
@@ -113,7 +117,7 @@
       </div>
     </div>
   </div>
-
+  {% paginate %}
 </div>
 
 
