--- a/datacombo/templates/survey/survey.html
+++ b/datacombo/templates/survey/survey.html
@@ -10,6 +10,7 @@
 <ul class="nav nav-tabs">
   <li><a href="#participants" data-toggle="tab">Participants Overview</a></li>
   <li><a href="#variables" data-toggle="tab">Variables</a></li>
+  <li><a href="#recodes" data-toggle="tab">Custom Recodes</a></li>
 </ul>
 
 <div class="tab-content">
@@ -67,7 +68,7 @@
 
   <div class="tab-pane" id="variables">
     <div class="row">
-      <div class="col-lg-12">
+      <div class="col-lg-10 col-lg-offset-1">
         <h2>Variables</h2>
         <p>
           <a href="{% url "var-add" pk=survey.id %}" class="btn btn-lg btn-default"><i class="icon-plus-sign-alt"> </i>Add New Variable</a>
@@ -78,7 +79,6 @@
             <th>Summary Measure</th>
             <th>Variable Name</th>
             <th>Mapped From</th>
-            <th>Label</th>
             <th>Qual?</th>
             <th>Demographic?</th>
             <th class="col-lg-1">Action</th>
@@ -96,7 +96,6 @@
                 {% endfor %}
                 <a href="{% url "varmap-add" pk=survey.id %}"><span class="label label-success"><i class="icon-plus"> </i></span></a>
             </td>
-            <td>{{ v.description }}</td>
             <td>
               {% if v.qual %}
                 <i class="icon-ok-sign text-primary"></i>
@@ -117,6 +116,39 @@
       </div>
     </div>
   </div>
+
+  <div class="tab-pane" id="recodes">
+    <div class="row">
+      <div class="col-lg-8 col-lg-offset-2">
+        <h2>Custom Recodes</h2>
+        <p>
+          <a href="{% url "recode-add" pk=survey.id %}" class="btn btn-lg btn-default"><i class="icon-plus-sign-alt"> </i>Add New Custom Recode</a>
+        </p>
+
+        <table class="table table-striped table-condensed">
+          <tr>
+            <th>Variable Name</th>
+            <th>Original Value</th>
+            <th>Recoded Value</th>
+            <th class="col-lg-2">Action</th>
+          </tr>
+          
+          {% for r in recodes %}
+          <tr class="recode">
+            <td>{{ r.variable.name }}</td>
+            <td>{{ r.orig_code }}</td>
+            <td>{{ r.recode }}</td>
+            <td>
+              <a href="{% url "recode-edit" pk=r.id %}" class="btn btn-default btn-xs"><i class="icon-edit icon-large"> </i></a>
+              <a href="{% url "recode-delete" pk=r.id %}" class="btn btn-danger btn-xs"><i class="icon-trash icon-large"> </i></a>
+            </td>
+          </tr>
+          {% endfor %}
+        </table>
+      </div>
+    </div>
+  </div>
+
   {% paginate %}
 </div>
 
